# everydaynews

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  SKILL.md  config.example.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
references/: report.template.json  schema.md  source-audit.md  sources.yaml  web-watchlist.md  wechat.template.txt
scripts/: collect.py  finalize.py  publish_notion.py  validate_report.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/crawl/: route.ts
src/app/api/crawl/search/: route.ts
src/app/api/crawl/search-source/: route.ts
src/app/api/crawl/summarize/: route.ts
src/daily_frontier_intelligence/: __init__.py  cli.py  collector.py  config.py  models.py  normalize.py  notion.py  report.py  security.py  state.py
src/lib/: crawlWorkflow.ts  mediaSources.ts  types.ts
tests/: conftest.py  test_cli.py  test_collector.py  test_dry_run.py  test_hardening.py  test_normalize.py  test_report_notion.py  test_security.py  test_state.py
