[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daily-frontier-intelligence"
version = "1.0.0"
description = "Deterministic collection and publication support for a Hermes daily frontier intelligence skill"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
  "feedparser>=6.0.11,<7",
  "httpx>=0.27,<1",
  "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2,!=1.5.1",
  "mypy>=1.19,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "types-python-dateutil>=2.9",
]

[project.scripts]
daily-frontier-intelligence = "daily_frontier_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_frontier_intelligence"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501", "I001"]
